--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.14.1/moment.min.js"></script>
     <script src="https://kit.fontawesome.com/37f4b52f85.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="icon" href="rocket-transparent.png" type="image/x-icon">
 </head>
 
 <body>
