--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
                 </table>
             </center>
         </div>
+        <!-- <h3 id="prevLaunch"><a href="prevLaunches.html">Previous launches</a></h1> -->
     </div>
     <div id="aboutSection">
         <div id="tables">
