--- a/about.html
+++ b/about.html
@@ -38,7 +38,8 @@
             <p id="para"><a href="https://www.github.com/ChopsKingsland" target="_blank"><i
                         class="fab fa-github"></i></a> &nbsp;&nbsp; <a href="https://www.twitter.com/ChopsKingsland"
                     target="_blank"><i class="fab fa-twitter"></i></a> &nbsp;&nbsp; <a
-                    href="https://www.youtube.com/chops16" target="_blank"><i class="fab fa-youtube"></i></a></p>
+                    href="https://www.youtube.com/chops16" target="_blank"><i class="fab fa-youtube"></i></a> &nbsp;&nbsp; <a
+                    href="webcal://spacextra.github.io/SpaceXtra.ics" target="_blank"><i class="far fa-calendar-alt"></i></a></p>
         </div>
     </div>
     <div id="imgSection">
