--- a/app.html
+++ b/app.html
@@ -7,7 +7,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>SpaceXtra</title>
+        <title>SpacExtra</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="app.css" type="text/css">
@@ -18,18 +18,19 @@
         <![endif]-->
         <div id="hero">
             <nav id="menu">
-                <!-- <h1 id="title">SpaceXtra</h1> -->
-                <!-- <a href="/" id="title">SpaceXtra</a> -->
+                <!-- <h1 id="title">SpacExtra</h1> -->
+                <!-- <a href="/" id="title">SpacExtra</a> -->
                 <ul>
-                    <!-- <li><a href="/" id="title">SpaceXtra</a></li> -->
+                    <!-- <li><a href="/" id="title">SpacExtra</a></li> -->
                     <li id="menuItem menuApp" class="inactive"><a href="app.html" id="right">App</a></li>
                     <li id="menuItem menuAbout" class="inactive"><a href="about.html" id="right fRight">About</a></li>
                     <li id="menuItem menuHome" class="inactive"><a href="index.html" id="right fRight">Home</a></li>
                 </ul>
             </nav>
             <div id="appCS">
-                <h1 id="app">SpaceXtra app coming soon</h1>
-                <p id="para">iOS app for SpaceXtra will launch soon - watch this space!</p>
+                <h1 id="app">SpacExtra app</h1>
+                <p id="para">SpacExtra app now on iOS</p>
+                <a href="https://apps.apple.com/gb/app/spacextra/id1559360281" target="_blank"><img src="/Download_on_the_App_Store_Badge_US-UK_RGB_wht_092917.svg" alt="download" srcset=""></a>
             </div>
         </div>
         <script src="" async defer></script>
