--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>SpaceXtra</title>
+    <title>SpacExtra</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="index.css" type="text/css">
@@ -25,10 +25,10 @@
 
     <div id="hero">
         <nav id="menu">
-            <!-- <h1 id="title">SpaceXtra</h1> -->
-            <!-- <a href="/" id="title">SpaceXtra</a> -->
+            <!-- <h1 id="title">SpacExtra</h1> -->
+            <!-- <a href="/" id="title">SpacExtra</a> -->
             <ul>
-                <!-- <li><a href="/" id="title">SpaceXtra</a></li> -->
+                <!-- <li><a href="/" id="title">SpacExtra</a></li> -->
                 <li id="menuItem menuApp" class="inactive"><a href="app.html" id="right">App</a></li>
                 <li id="menuItem menuAbout" class="inactive"><a href="about.html" id="right fRight">About</a></li>
                 <li id="menuItem menuHome" class="inactive"><a href="index.html" id="right fRight">Home</a></li>
@@ -101,7 +101,7 @@
                     </td>
                 </tr>
                 <tr valign="top">
-                    <td id="abtPara">SpaceXtra is a website/app create by me, a 14-year-old from the UK. <a href="about.html">Read More</a></td>
+                    <td id="abtPara">SpacExtra is a website/app create by me, a 15-year-old from the UK. <a href="about.html">Read More</a></td>
                 </tr>
             </table>
             <table id="tb2" class="abtText">
@@ -111,7 +111,7 @@
                     </td>
                 </tr>
                 <tr valign="top">
-                    <td>App coming soon - watch this space! <a href="app.html">Read More</a></td>
+                    <td>App now out on the Apple App Store - <a href="app.html">Read More</a></td>
                 </tr>
             </table>
         </div>
