--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="https://kit.fontawesome.com/37f4b52f85.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="icon" href="rocket-transparent.png" type="image/x-icon">
+    <meta name="apple-itunes-app" content="app-id= 1559360281, app-argument=spacextra://">
 </head>
 
 <body>
