launch info for sharing

--- a/launch/index.html
+++ b/launch/index.html
@@ -1,12 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="/launch/index.css" rel="stylesheet" type="text/css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <title>SpacExtra</title>
-</head>
-<body>
+  </head>
+  <body>
+
+    <div id="parent">
+        <div id="card">
+            <div class="section">
+                <img src="http://imgur.com/573IfGk.png" alt="mission patch" id="patch">
+                <h1 class="title text">NAME</h1>
+                <p class="content text" id="name">placeholder</p>
+                <hr>
+            </div>
+            <div class="section">
+                <h1 class="title text">DATE</h1>
+                <p class="content text" id="date">placeholder</p>
+                <hr>
+            </div>
+            <div class="section">
+                <h1 class="title text">DESCRIPTION</h1>
+                <p class="content text" id="desc">placeholder</p>
+                <hr>
+            </div>
+            <div class="section">
+                <h1 class="title text">ROCKET</h1>
+                <p class="content text" id="rocket">placeholder</p>
+                <hr>
+            </div>
+            <div class="section">
+                <h1 class="title text">YOUTUBE</h1>
+                <p class="content text" id="yt">placeholder</p>
+                <hr>
+            </div>
+        </div>
+    </div>
+
     <script src="/launch/index.js"></script>
-</body>
+  </body>
 </html>
